Fix icon stretch on chrome/firefox.

--- a/src/Editor/Util/ActionButton/_actionbutton.scss
+++ b/src/Editor/Util/ActionButton/_actionbutton.scss
@@ -65,7 +65,6 @@ $action-button-transition-duration: .2s;
 
 .action-button-text-icon {
   min-height: 24px;
-  max-height: 24px; 
   margin-right: 6px
 }
 
